2011-01-12  Dan Osipov <dosipov@phillyburbs.com>

	* Fixed Bug #16349: Adapt dam_tt_content to the TCA changes in TYPO3 4.5 (Thanks Lorenz Ulrich)

2008-09-30  Michiel Roos <michiel@netcreators.com>

	* Fixed Bug #10284: dam_ttcontent has the string '\ No new line at end of file' at the end of several files

2008-09-30  Ingo Renner  <ingo@typo3.org>

	* Fixed Bug #8529: dam_ttcontent does not respect workspaces
	* Bumped version to 1.1.0-dev

2007-10-17  Michael Stucki  <michael@typo3.org>

	* Takeover by the DAM development team

2007-04-07  Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 5301: DAM 1.1 Beta5 dam_ttcontent does not respect multi-language records (changed to use 'media' object which fetches the right language in FE automatically)

2007-02-21  Rene Fritz  <r.fritz@colorcube.de>

	* Added: modifications to the page module (XCLASS) to enable the display of thumbnails.

2007-02-16  Rene Fritz  <r.fritz@colorcube.de>

	* Change: remove mmforeign dependency
	* Added: use ext_update.php to create warnings in EM when needed: mmforeign or T3 4.1.